# leaper

./: .envrc  .gitignore  Cargo.toml  README.md  crates.nix  flake.nix  history.txt  justfile  log.txt  result  rust-toolchain.toml
.github/workflows/: cachix.yml
leaper/: Cargo.toml
leaper-apps/: Cargo.toml
leaper-apps/src/: lib.rs  lib.rsFecRYK.bck
leaper-core/: Cargo.toml
leaper-core/src/: config.rs  lib.rs  modules.rs
leaper-core/src/config/: modules.rs  theme.rs
leaper-core/src/config/modules/: builtins.rs
leaper-core/src/modules/: applications.rs
leaper-core/src/state/: app.rs  db.rs
leaper-daemon/: Cargo.toml
leaper-daemon/src/: client.rs  fs.rs  lib.rs  main.rs
leaper-db/: Cargo.toml
leaper-db/src/: apps.rs  fs.rs  lib.rs  queries.rs
leaper-executor/: Cargo.toml
leaper-launcher/: Cargo.toml
leaper-launcher/src/: lib.rs  search.rs
leaper-lock/: Cargo.toml
leaper-lock/src/: lib.rs
leaper-macros/: Cargo.toml
leaper-macros/src/: db.rs  errors.rs  lib.rs  util.rs
leaper-mode/: Cargo.toml
leaper-mode/src/: config.rs  lib.rs
leaper-power/: Cargo.toml
leaper-power/src/: lib.rs
leaper-runner/: Cargo.toml
leaper-runner/src/: lib.rs
leaper-style/: Cargo.toml
leaper-style/src/: lib.rs
leaper-tracing/: Cargo.toml
leaper-tracing/src/: lib.rs
leaper/src/: app.rs  cli.rs  config.rs  db.rs  executor.rs  main.rs  testbed.rs
leaper/src/app/: apps.rs  mode.rs  style.rs  types.rs
leaper/src/app/mode/: apps.rs  power.rs  runner.rs
leaper/src/app/mode/apps/: search.rs
leaper/src/db/: apps.rs  fs.rs  queries.rs
leaper/src/ui/: app.rs  util.rs
