[workspace]
resolver = "3"
members = ["leaper", "leaper-db", "leaper-macros"]

[workspace.metadata.crane]
name = "leaper"

[workspace.dependencies]
surrealdb = { version = "2.3.10", default-features = false }
surrealdb-core = "2.3.10"

surrealdb-extras = { git = "https://github.com/tukanoidd/surrealdb-extras.git", rev = "83d604846df83d6772562bbe7eadf97a37d02cbc" }

vfs = { version = "0.12.2", features = ["async-vfs"] }

tokio = "1.48"
tokio-mpmc = "0.2.4"
futures = "0.3.31"

directories = "6.0"

shlex = "1.3.0"

serde = "1.0"
heck = "0.5.0"

bon = "3.8"

tracing = "0.1"

thiserror = "2.0"
color-eyre = "0.6.5"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vitalii Lukyanov"]
license = "MIT"
repository = "https://github.com/tukanoidd/leaper"
homepage = "https://github.com/tukanoidd/leaper"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
