[workspace]
resolver = "3"
members = [
  "leaper",
  "leaper-db",
  "leaper-executor",
  "leaper-launcher",
  "leaper-macros",
  "leaper-mode",
  "leaper-power",
  "leaper-runner", "leaper-style",
]

[workspace.metadata.crane]
name = "leaper"

[workspace.dependencies]
iced = "0.13"
iced_layershell = "0.13.7"
iced_aw = { version = "0.12.2", default-features = false }
iced_fonts = { version = "0.2.1", features = ["nerd"] }

image = "0.25.8"
ez-pixmap = "0.2.2"

surrealdb = { version = "2.3.10", default-features = false }
surrealdb-core = "2.3.10"
surrealdb-extras = { git = "https://github.com/tukanoidd/surrealdb-extras.git", rev = "83d604846df83d6772562bbe7eadf97a37d02cbc" }

vfs = { version = "0.12.2", features = ["async-vfs"] }

nucleo = "0.5.0"

logind-zbus = "5.3.2"
zbus = "5.12.0"

tokio = "1.48"
tokio-stream = "0.1.17"
tokio-mpmc = "0.2.4"
futures = "0.3.31"

dashmap = "6.1.0"

directories = "6.0"

shlex = "1.3.0"

serde = "1.0"
toml = "0.9.8"
heck = "0.5.0"

smart-default = "0.7"
derive_more = "2.0.1"
bon = "3.8"
itertools = "0.14"

tracing = "0.1"

thiserror = "2.0"
color-eyre = "0.6.5"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vitalii Lukyanov"]
license = "MIT"
repository = "https://github.com/tukanoidd/leaper"
homepage = "https://github.com/tukanoidd/leaper"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
