[package]
name = "leaper-apps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }
leaper-db = { path = "../leaper-db" }

tokio.workspace = true

tracing.workspace = true

bon.workspace = true
itertools.workspace = true

serde.workspace = true

thiserror.workspace = true
miette.workspace = true

walkdir = "2.5.0"
image = "0.25.6"

nom = "8.0.0"
freedesktop-desktop-entry = "0.7.13"
shlex = "1.3.0"
