[package]
name = "leaper-apps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
profile = []

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }
leaper-db = { path = "../leaper-db" }

tokio.workspace = true
futures.workspace = true

tracing.workspace = true

shlex.workspace = true

bon.workspace = true
itertools.workspace = true

serde.workspace = true

thiserror.workspace = true
miette.workspace = true

async-walkdir = "2.1.0"
walkdir = "2.5.0"
image = "0.25.6"

nom = "8.0.0"
freedesktop-desktop-entry = "0.7.13"
icon-cache = "0.1.2"
