[package]
name = "leaper-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
iced.workspace = true

tokio = { workspace = true}

directories.workspace = true

smart-default.workspace = true

serde = { workspace = true}

tracing.workspace = true

thiserror.workspace = true
miette.workspace = true

dotenvy = "0.15.7"
which = "7.0.3"
applications = "0.3.1"
nucleo = "0.5.0"

surrealdb = { version = "2.3.3", features = ["kv-surrealkv"], default-features = false }
bon = { version = "3.6.3", default-features = false }
pastey = "0.1.0"
serde_json = "1.0.140"
toml = "0.8.22"
ron = "0.10.1"
csscolorparser = { version = "0.7.1", features = ["serde"], default-features = false }
uuid = { version = "1.17.0", default-features = false }
