[package]
name = "leaper-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

profile = ["leaper-tracing/profile"]

[dependencies]
db = { path = "../leaper-db", package = "leaper-db" }
mode = { path = "../leaper-mode", package = "leaper-mode" }
leaper-tracing.path = "../leaper-tracing"

tarpc.workspace = true

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures.workspace = true

vfs.workspace = true

directories.workspace = true

itertools.workspace = true

tracing.workspace = true

color-eyre.workspace = true
