[package]
name = "leaper-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
profile = []

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }

tokio.workspace = true

serde.workspace = true

tracing.workspace = true

thiserror.workspace = true
miette.workspace = true

surrealdb = { version = "2.3.5", default-features = false, features = [
  "kv-surrealkv",
] }
uuid = "1.17.0"
