[package]
name = "leaper-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
profile = []
websocket = ["surrealdb/protocol-ws"]

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }

tokio.workspace = true
futures.workspace = true

serde.workspace = true

derive_more = { workspace = true, features = ["deref"] }

tracing.workspace = true

thiserror.workspace = true
miette.workspace = true

surrealdb = { version = "2.3.6", default-features = false, features = [
  "kv-surrealkv",
] }
uuid = "1.17.0"
serde_json = "1.0.140"
