[package]
name = "leaper-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror"]

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }

surrealdb = { workspace = true, features = ["allocator", "protocol-ws"] }
surrealdb-core.workspace = true
surrealdb-types.workspace = true
surrealdb-extras.workspace = true

tokio.workspace = true
tokio-mpmc.workspace = true
futures.workspace = true

shlex.workspace = true

bon.workspace = true

serde.workspace = true

tracing.workspace = true

thiserror.workspace = true

freedesktop-desktop-entry = "0.7.19"
