[package]
name = "leaper-lock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror"]

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }
mode = { path = "../leaper-mode", package = "leaper-mode" }
style = { path = "../leaper-style", package = "leaper-style" }

iced.workspace = true
iced_sessionlock.workspace = true

tokio.workspace = true

nonstick.workspace = true
nix = { workspace = true, features = ["user"] }

directories.workspace = true

chrono.workspace = true

tracing.workspace = true

thiserror.workspace = true
