[package]
name = "leaper-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = { version = "1.0.95", features = ["nightly", "span-locations"] }
quote = "1.0.40"
syn = "2.0.104"

surrealdb.workspace = true

heck.workspace = true
