[package]
name = "leaper-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[features]
default = []
profile = []

[dependencies]
darling = "0.21.3"
manyhow = { version = "0.11.4" }
proc-macro2 = { version = "1.0.103", features = ["nightly", "span-locations"] }
quote = "1.0.41"
syn = "2.0.108"
