[package]
name = "leaper-mode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.cargo-machete]
ignored = ["thiserror"]

[dependencies]
macros = { path = "../leaper-macros", package = "leaper-macros" }

iced.workspace = true

directories.workspace = true

serde.workspace = true
toml.workspace = true
heck.workspace = true

smart-default.workspace = true

thiserror.workspace = true
