[package]
name = "leaper-tracing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
profile = ["tracing-tracy"]

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = [
  "ansi",
  "env-filter",
], default-features = false }

# Profiling
tracing-tracy = { version = "0.11", default-features = false, features = [
  "broadcast",
  "callstack-inlines",
  "code-transfer",
  "context-switch-tracing",
  "enable",
  "sampling",
  "fibers",
  "ondemand",
  "timer-fallback",
], optional = true }

color-eyre.workspace = true
