[package]
name = "leaper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
db-websocket = ["launcher/db-websocket"]

profile = ["tracing-tracy"]

[dependencies]
mode = { path = "../leaper-mode", package = "leaper-mode" }
launcher = { path = "../leaper-launcher", package = "leaper-launcher" }
power = { path = "../leaper-power", package = "leaper-power" }
runner = { path = "../leaper-runner", package = "leaper-runner" }

tracing.workspace = true

color-eyre.workspace = true

clap = { version = "4.5.51", features = ["derive"] }

tracing-subscriber = { version = "0.3.20", features = [
  "ansi",
  "env-filter",
], default-features = false }


# Profiling
tracing-tracy = { version = "0.11", default-features = false, features = [
  "broadcast",
  "callstack-inlines",
  "code-transfer",
  "context-switch-tracing",
  "enable",
  "sampling",
  "fibers",
  "ondemand",
  "timer-fallback",
], optional = true }
