[package]
name = "leaper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

profile = ["leaper-tracing/profile"]

[dependencies]
mode = { path = "../leaper-mode", package = "leaper-mode" }
launcher = { path = "../leaper-launcher", package = "leaper-launcher" }
power = { path = "../leaper-power", package = "leaper-power" }
runner = { path = "../leaper-runner", package = "leaper-runner" }
lock = { path = "../leaper-lock", package = "leaper-lock" }
leaper-tracing.path = "../leaper-tracing"

tracing.workspace = true

color-eyre.workspace = true

clap = { version = "4.5.53", features = ["derive"] }
